@startuml DI_and_Pipe_Focus

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam packageFontSize 14

package "Pipeline" {
  abstract class Pipe {
    +process(ctx)
    #{abstract} _process()
  }

  class ConfigurablePipe {
    +process(ctx)
    +_build_pipe(stepCfg, ctx)
  }

  class AddNotePipe {
    +AddNotePipe(config, ts)
    +_process()
  }

  Pipe <|-- ConfigurablePipe
  Pipe <|-- AddNotePipe
}

package "Dependency Injection" {
  class PipeFactory {
    +build(stepCfg)
    -_resolve_injects(map)
  }

  interface Container <<Injector>> {
    +get(T)
    +create_object(T; kwargs)
  }

  class UnifiedRegistry {
    +get(id)
    +register(id; instance)
  }


}

package "Configuration" {
  class StepConfig {
    +use: ImportString
    +args: dict
    +injects: dict
  }

  class AppConfig {
    +defs: list
  }

  StepConfig --> AddNotePipe : use

}

interface TicketSystemService
AddNotePipe --> TicketSystemService : ctor injection
PipeFactory --> Container : uses
PipeFactory ..> UnifiedRegistry : optional lookup
ConfigurablePipe --> PipeFactory : builds children via
PipeFactory --> StepConfig : consumes
PipeFactory --> AppConfig : reads defs
@enduml
